Added basic entity validation and exception handling. Beautified controllers and services.